<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lemuel.exercise.simplemenu.MainActivity" >

	 <item
	 android:id="@+id/menu_add"
	 android:title="@string/add_text">
	</item>
	<item
	 android:id="@+id/menu_edit"
	 android:title="@string/edit_text">
	</item>
	<item
	 android:id="@+id/menu_delete"
	 android:orderInCategory="3"
	 android:title="@string/delete_text">
	</item>
	
	<group
	 android:id="@+id/group1">
		<item
		 android:id="@+id/menu_copy"
		 android:orderInCategory="1"
		 android:title="@string/copy_text">
		</item>
		<item
		 android:id="@+id/menu_paste"
		 android:orderInCategory="2"
		 android:title="@string/paste_text">
		</item>
		<item
		 android:id="@+id/menu_exit"
		 android:orderInCategory="4"
		 android:title="@string/exit_text">
		</item>
	</group>

</menu>
